[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Leia_area.gd" type="Script" id=1]
[ext_resource path="res://assets/cell_leia.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.555, 31.396 )

[node name="LeiaArea2D" type="Area2D" groups=[
"item",
]]
script = ExtResource( 1 )

[node name="LeiaSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_LeiaArea2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_LeiaArea2D_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
